--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Kali Weather App"
+      content="Minimal Weather React Application"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
     <script type="text/js" src="../src/static/js/jquery-1.11.1.min.js"></script>
     <script type="text/js" src="../src/static/js/plugins.js"></script>
     <script type="text/js" src="../src/static/js/app.js"></script>
 
-    <title>React App</title>
+    <title>Kali Open Weather App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
